@@ -1,3 +1,7 @@
+Jul 18, 2023: libarchive 3.7.0 released
+
+Jul 14, 2023: bsdunzip port from FreeBSD
+
 Dec 07, 2022: libarchive 3.6.2 released
 
 Apr 08, 2022: libarchive 3.6.1 released
